# ftt

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
examples/: data.json  hello.py  sample.txt
scripts/: bandit_demo.py  black_demo.py  bump_version.py  check_pytest.py  flake8_demo.py  format.py  mypy_demo.py  precommit_uv_demo.py  test.py  tox_demo.py  tox_uv_demo.py  uv_demo.py  uv_workflow.sh
src/ftt/: __init__.py  _version.py  cli.py  core.py  types.py
src/ftt/tests/: __init__.py  filesystem.py  language.py  magic.py
tests/: test_basic.py
